k8s/traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      hostNetwork: true
      nodeSelector:
        cloud.google.com/gke-nodepool: ingress-pool
      tolerations:
        - effect: NoExecute
          key: ingress-pool
          operator: Equal
          value: "true"
      containers:
        - name: traefik
          image: traefik:v2.6
          args:
            - --entrypoints.web.Address=:80
            - --entrypoints.web.http.redirections.entryPoint.to=websecure
            - --entrypoints.web.http.redirections.entryPoint.scheme=https
            - --entrypoints.web.http.redirections.entrypoint.permanent=true
            - --entrypoints.websecure.Address=:443
            - --entrypoints.websecure.http.tls
            - --entrypoints.ping.address=:8081
            - --ping.entrypoint=ping
            - --providers.kubernetescrd
            - --providers.kubernetescrd.allowCrossNamespace=true
            # - --api
            # - --api.insecure
            # - --accesslog
            # - --log.level=DEBUG
            # - --log.filePath=/traefik.log
            # - --accesslog=true
            # - --accesslog.filepath=/access.log
            # See https://doc.traefik.io/traefik/user-guides/crd-acme/
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8081
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
