k8s/traefik/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  # tls:
  #   certResolver: myresolver
